--- a/CarcassonneClient/nbproject/private/private.properties
+++ b/CarcassonneClient/nbproject/private/private.properties
@@ -2,7 +2,9 @@ auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.CarcassonneClient.jar=C:\\Users\\Timea\\Downloads\\CarcassoneClient\\CarcassonneClient
 javac.debug=true
 javadoc.preview=true
+javafx.run.as=standalone
+javafx.run.inbrowser=<Default System Browser>
+javafx.run.inbrowser.path=C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe
 user.properties.file=C:\\Users\\Timea\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
