--- a/CarcassonneClient/nbproject/project.properties
+++ b/CarcassonneClient/nbproject/project.properties
@@ -30,15 +30,13 @@ dist.jar=${dist.dir}/CarcassonneClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.CarcassonneClient.jar=dist/CarcassonneClient.jar
-file.reference.CarcassonneShared.jar=../CarcassonneShared/dist/CarcassonneShared.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.CarcassonneShared.jar}
+    ${reference.CarcassonneShared.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -114,10 +112,11 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
+project.CarcassonneShared=../CarcassonneShared
+reference.CarcassonneShared.jar=${project.CarcassonneShared}/dist/CarcassonneShared.jar
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${file.reference.CarcassonneClient.jar}
+    ${build.classes.dir}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
